--- a/index.html
+++ b/index.html
@@ -362,21 +362,7 @@
                     </a>
                 </div>
 
-                <!-- Card 2: Acefone vs VoIPLine -->
-                <div class="bg-white p-6 rounded-lg shadow-md hover:shadow-lg transition-all border-l-4 border-blue-500 card-hover flex flex-col">
-                    <div class="flex items-center mb-4">
-                        <div class="p-3 bg-blue-100 rounded-full mr-3">
-                            <svg class="w-6 h-6 text-blue-600" fill="currentColor" viewBox="0 0 24 24"><path d="M20 2H8c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V4c0-1.1-.9-2-2-2zm-8.5 7.5c0 .83-.67 1.5-1.5 1.5H9v2H7.5V7H10c.83 0 1.5.67 1.5 1.5v1zm5 2c0 .83-.67 1.5-1.5 1.5h-2.5V7H15c.83 0 1.5.67 1.5 1.5v3zm4-3H19v1h1.5V11H19v2h-1.5V7h3v1.5zM9 9.5h1v-1H9v1zM4 6H2v14c0 1.1.9 2 2 2h14v-2H4V6zm10 5.5h1v-3h-1v3z"/></svg>
-                        </div>
-                        <h3 class="text-lg font-bold text-gray-800 leading-tight">Acefone বনাম VoIPLine</h3>
-                    </div>
-                    <p class="text-sm text-gray-600 mb-6 flex-grow">প্রযুক্তিগত সক্ষমতা এবং বাণিজ্যিক কৌশলের ওপর ভিত্তি করে দুই কোম্পানির বিস্তারিত তুলনামূলক বিশ্লেষণ।</p>
-                    <a href="./assets/Acefone_vs_VoIPLine_Report.pdf" target="_blank" class="w-full block text-center bg-white border border-blue-500 text-blue-600 font-semibold py-2 rounded hover:bg-blue-50 transition">
-                        📄 পিডিএফ পড়ুন
-                    </a>
-                </div>
-
-                <!-- Card 3: VoIP Subscription Guide -->
+                <!-- Card 2: VoIP Subscription Guide -->
                 <div class="bg-white p-6 rounded-lg shadow-md hover:shadow-lg transition-all border-l-4 border-teal-500 card-hover flex flex-col">
                     <div class="flex items-center mb-4">
                         <div class="p-3 bg-teal-100 rounded-full mr-3">
@@ -389,14 +375,22 @@
                         📄 পিডিএফ পড়ুন
                     </a>
                 </div>
+
+                <!-- Card 3: Acefone vs VoIPLine -->
+                <div class="bg-white p-6 rounded-lg shadow-md hover:shadow-lg transition-all border-l-4 border-blue-500 card-hover flex flex-col">
+                    <div class="flex items-center mb-4">
+                        <div class="p-3 bg-blue-100 rounded-full mr-3">
+                            <svg class="w-6 h-6 text-blue-600" fill="currentColor" viewBox="0 0 24 24"><path d="M20 2H8c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V4c0-1.1-.9-2-2-2zm-8.5 7.5c0 .83-.67 1.5-1.5 1.5H9v2H7.5V7H10c.83 0 1.5.67 1.5 1.5v1zm5 2c0 .83-.67 1.5-1.5 1.5h-2.5V7H15c.83 0 1.5.67 1.5 1.5v3zm4-3H19v1h1.5V11H19v2h-1.5V7h3v1.5zM9 9.5h1v-1H9v1zM4 6H2v14c0 1.1.9 2 2 2h14v-2H4V6zm10 5.5h1v-3h-1v3z"/></svg>
+                        </div>
+                        <h3 class="text-lg font-bold text-gray-800 leading-tight">Acefone বনাম VoIPLine</h3>
+                    </div>
+                    <p class="text-sm text-gray-600 mb-6 flex-grow">প্রযুক্তিগত সক্ষমতা এবং বাণিজ্যিক কৌশলের ওপর ভিত্তি করে দুই কোম্পানির বিস্তারিত তুলনামূলক বিশ্লেষণ।</p>
+                    <a href="./assets/Acefone_vs_VoIPLine_Report.pdf" target="_blank" class="w-full block text-center bg-white border border-blue-500 text-blue-600 font-semibold py-2 rounded hover:bg-blue-50 transition">
+                        📄 পিডিএফ পড়ুন
+                    </a>
+                </div>
             </div>
             
-            <div class="mt-6 bg-yellow-50 border border-yellow-200 rounded p-4 text-sm text-yellow-800 flex items-start gap-3">
-                <span class="text-xl">⚠️</span>
-                <p>
-                    <strong>হোস্টিং নির্দেশিকা:</strong> এই বাটনগুলো কাজ করার জন্য, আপনার GitHub প্রজেক্টের রুট ফোল্ডারে <code>assets</code> নামে একটি ফোল্ডার তৈরি করুন এবং সেখানে আপনার পিডিএফ ফাইলগুলো আপলোড করুন। ফাইলের নামগুলো যেন কোডের <code>href</code>-এর সাথে মিলে (যেমন: <em>Acefone_Tools_and_Pricing.pdf</em>)।
-                </p>
-            </div>
         </section>
 
         <!-- Section 6: Decision Wizard -->
@@ -439,7 +433,7 @@
     <!-- Footer -->
     <footer class="bg-gray-800 text-gray-400 py-8 mt-12">
         <div class="max-w-7xl mx-auto px-4 text-center">
-            <p>&copy; 2025 VoIP Comparison Tool. সোর্স রিপোর্টের ওপর ভিত্তি করে তৈরি।</p>
+            <p>&copy; 2025 VoIP Comparison Tool. সোর্স রিপোর্টের ওপর ভিত্তি করে তৈরি। Created by - Shuvo </p>
         </div>
     </footer>
 
